[package]
authors = ["ivanpierre <me@ivanpierre.world>"]
edition = "2018"
name    = "clojurust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[lib]

[dependencies]
bigint      = "4.4.3"
im          = { version = "15.0.0", features = [] }
intertrait  = "0.2"
lazy_static = "1.4.0"
linkme      = "0.2"
mut_static  = "5.0.0"
rc          = "0.1.1"
